Adding probability derivative proofs.

--- a/website/Presentation/header.html
+++ b/website/Presentation/header.html
@@ -36,4 +36,7 @@ document.addEventListener('DOMContentLoaded', function() {
   text-transform: uppercase; /* Optional for discreet style */
   letter-spacing: 1px; /* Optional for better readability */
 }
+.caption{
+   text-align: center;
+}
 </style>
